--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="dist/out.js" type="module"></script>
+  <!-- <script src="dist/out.js" type="module"></script> -->
+  <script src="dist/http_url/out.js" type="module"></script>
 </body>
 </html>
